ERSKY9x changelog
Please insert a short description of a change by inserting it below this header and 
above the previous change.

Format is as follows:
******************************************
CHANGELOG: 25-APR-2011
description here
====================================================================================

******************************************
CHANGELOG: 08-Jul-2013  MPB
Vario parameters stored in EEPROM
Rotary LONG exits popup
No delete on popup for current model
Disable stick scroll on mode change

******************************************
CHANGELOG: 03-Jul-2013  MPB
Model select popup
GVARS on voice

******************************************
CHANGELOG: 23-Jun-2013  MPB
Fix vario edit display bug

******************************************
CHANGELOG: 22-Jun-2013  MPB
Move vario config to TELEMETRY2

******************************************
CHANGELOG: 21-Jun-2013  MPB
Add FAS current offset
Add vario tones
Add function switch to enable vario
Flash saving
Add Auto limits adjust option on sub-trim

******************************************
CHANGELOG: 07-Jun-2013  MPB
Change curve editing
Higher resolution switch timers
Change expo/dual rate editing
Fix late offset bug

******************************************
CHANGELOG: 11-May-2013  MPB
Fix WSHH bugs
Add Watts for FAS-40/100
Insta-trim ignore small stick offsets

******************************************
CHANGELOG: 28-Apr-2013  MPB
Add TRN to AND switches
Fix voice timer minute bug
Fix Co-processor reboot bug
Version 06 of TinyApp available
Alarm if Co-processor out of date
Stick scrolling times out if not used
Fix SLOW UP missing bug

******************************************
CHANGELOG: 21-Apr-2013  MPB
Timer comparison changes
Reboot processing fixed.

******************************************
CHANGELOG: 19-Apr-2013  MPB
Reboot report improvement
Stick Scrolling/encoder improvements
'late' offset option in mix
Rotary encoder triggers backlight
